# -EchoForge_v3

./: .gitignore  Activation_Packet_v1.1.md  Codex_Bootstrap_Command.md  README.md  pytest.ini
backend/: README.md  alembic.ini  pyproject.toml  start_command.md  tmp_list_audio.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routers/: __init__.py  capture.py  dashboard.py  entries.py  health.py  taxonomy.py
backend/app/config/: __init__.py  loader.py
backend/app/domain/dashboard/: __init__.py  summary_service.py
backend/app/domain/ef01_capture/: __init__.py  fingerprint.py  idempotency.py  manual.py  runtime.py  watch_folders.py  watcher.py
backend/app/domain/ef02_transcription/: __init__.py
backend/app/domain/ef03_extraction/: __init__.py  service.py
backend/app/domain/ef04_normalization/: __init__.py
backend/app/domain/ef05_semantics/: __init__.py
backend/app/domain/ef06_entrystore/: __init__.py  gateway.py  models.py  pipeline_states.py
backend/app/domain/taxonomy/: __init__.py  (+3 more)
backend/app/ets/: __init__.py
backend/app/infra/: events.py  metrics.py
backend/app/jobs/: extraction_worker.py  normalization_worker.py  semantic_worker.py  transcription_worker.py
backend/migrations/: env.py
backend/migrations/versions/: 20251207_add_capture_fingerprint_columns.py  20251207_add_extraction_columns.py  20251207_add_semantic_tags_column.py  20251207_add_transcription_columns.py  20251207_initial_entries_table.py  20251210_add_taxonomy_columns.py  20251210_add_taxonomy_indexes.py  20251210_create_taxonomy_tables.py
(+154 files in other folders)
