[project]
name = "echoforge-backend"
version = "0.1.0"
description = "EchoForge FastAPI backend scaffold"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.poetry]
package-mode = false
